--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 	  <title>DingusCorp</title>
+	  <meta name="viewport" content="width=device-width, initial-scale=1">
 	  <link rel="icon" 
 	        type="image/png" 
 	        href="https://avatars.githubusercontent.com/u/154478474?s=200&v=4" />
