HOTFIX: Change arrow symbols
Turns out the arrow symbols i used from the symbol picker in chromeos arent on other platforms (android etc)

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				</div>
 			</div>
 			<div bottomBar>
-				<button id="pp" bottomBtn onclick="">🠉</button><button id="np" bottomBtn>🠋</button>
+				<button id="pp" bottomBtn onclick="">▲</button><button id="np" bottomBtn>▼</button>
 			</div>
 			<script>
 				document.querySelector("#np").addEventListener("click", function(){
