--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				</div>
 			</div>
 			<div bottomBar>
-				<button id="pp" bottomBtn onclick="">▲</button><button id="np" bottomBtn>▼</button>
+				<button id="pp" bottomBtn onclick=""><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="#fefefe" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up"><line x1="12" y1="19" x2="12" y2="5"></line><polyline points="5 12 12 5 19 12"></polyline></svg></button><button id="np" bottomBtn><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="#fefefe" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-down"><line x1="12" y1="5" x2="12" y2="19"></line><polyline points="19 12 12 19 5 12"></polyline></svg></button>
 			</div>
 			<script>
 				document.querySelector("#np").addEventListener("click", function(){
