More info, fix image sizing

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	  <title>DingusCorp</title>
 	  <meta name="viewport" content="width=device-width, initial-scale=1">
 	  <link rel="icon" 
-	        type="image/png" 
-	        href="https://avatars.githubusercontent.com/u/154478474?s=200&v=4" />
+	        type="image/jpeg" 
+	        href="logo.jpg" />
 		<style>
 			body{
 				height:100vh !important;
@@ -63,7 +63,7 @@
 	<body>
 		<center>
 			<div class="page" id="0">	
-				<img src="https://avatars.githubusercontent.com/u/154478474?s=2000&v=4" style="width:30vw;"><br>
+				<img src="logo.jpg" style="width:30vw;max-width:640px;max-height:640px"><br>
 				<h1>DingusCorp</h1><br>
 				<h2>👋 We are DingusCorp.</h2><br>
 			</div><br>
@@ -72,17 +72,20 @@
 				<div>
 					<img src="https://placehold.co/100x100">
 					<h3>Yannick</h3>
-					<h5>Short description</h5>
+					<i>unset</i>
+					<h5 style="text-align:center">CEO<br>Hardware<br>CAD Designer</h5>
 				</div>
 				<div style="display:inline-block">
 					<img src="https://placehold.co/100x100">
 					<h3>Bastien</h3>
-					<h5>Short description</h5>
+					<i>unset</i>
+					<h5 style="text-align:center">Lead Programmer</h5>
 				</div>
 				<div style="display:inline-block">
-					<img src="https://placehold.co/100x100">
+					<img src="https://avatars.githubusercontent.com/u/47910472?s=100&v=4">
 					<h3>Fox</h3>
-					<h5>Short description</h5>
+					<i>they/she/he</i>
+					<h5 style="text-align:center">Programmer, <small><i>UI/UX Designer?</i></small></h5>
 				</div>
 			</div>
 			<div bottomBar>
