--- a/index.html
+++ b/index.html
@@ -62,11 +62,12 @@
 				display:inline-block;
 				padding:10px;
 				border-radius:5px;
-				border: 2px solidrgba(255, 255, 255, 0.16);
+				border: 2px solid rgba(255, 255, 255, 0.16);
 			}
-			*[gridbox]{
-				border: 5px solidrgba(255, 255, 255, 1);
+			*[gridbox]:hover{
+				border: 5px solid rgb(255, 255, 255);
 				transform: scale(2);
+				background:#0E0C0F;
 			}
 		</style>
 	<head/>
