--- a/index.html
+++ b/index.html
@@ -60,13 +60,14 @@
 			}
 			*[gridbox]{
 				display:inline-block;
-				padding:10px;
+				padding:5px;
 				border-radius:5px;
 				border: 2px solid rgba(255, 255, 255, 0.16);
+				margin:5px;
 			}
 			*[gridbox]:hover{
 				border: 5px solid rgb(255, 255, 255);
-				transform: scale(2);
+				transform: scale(1.2);
 				background:#0E0C0F;
 			}
 		</style>
@@ -86,13 +87,13 @@
 					<i>unset</i>
 					<h5 style="text-align:center">CEO<br>Hardware<br>CAD Designer</h5>
 				</div><br>
-				<div style="display:inline-block">
+				<div gridbox>
 					<img src="https://placehold.co/100x100">
 					<h3>Bastien</h3>
 					<i>unset</i>
 					<h5 style="text-align:center">Lead Programmer</h5>
 				</div>
-				<div style="display:inline-block">
+				<div gridbox>
 					<img src="https://avatars.githubusercontent.com/u/47910472?s=100&v=4">
 					<h3>Fox</h3>
 					<i>they/she/he</i>
